Configure search by key and pagination

--- a/src/pontos-web/pontos-web/Views/Produto/Cadastrar.cshtml
+++ b/src/pontos-web/pontos-web/Views/Produto/Cadastrar.cshtml
@@ -51,7 +51,7 @@
             <div class="form-group">
                 <div class="row">
                     <div class="col-md-12">
-                        <input type="submit" value="Cadastrar" class="btn btn-primary btn-block" />
+                        <input type="submit" value="Cadastrar" class="btn btn-dark btn-block" />
                     </div>
                 </div>
             </div>
