--- a/src/pontos-web/pontos-web/Views/Produto/Atualizar.cshtml
+++ b/src/pontos-web/pontos-web/Views/Produto/Atualizar.cshtml
@@ -52,7 +52,7 @@
             <div class="form-group">
                 <div class="row">
                     <div class="col-md-12">
-                        <input type="submit" value="Atualizar" class="btn btn-primary btn-block" />
+                        <input type="submit" value="Atualizar" class="btn btn-dark btn-block" />
                     </div>
                 </div>
             </div>
