--- a/src/pontos-web/pontos-web/Views/Produto/Index.cshtml
+++ b/src/pontos-web/pontos-web/Views/Produto/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IList<PontosWeb.Models.Produto>
+﻿@using PontosWeb.Services.Paginacao;
+@model Paginacao<PontosWeb.Models.Produto>
 
 @{
     ViewData["Title"] = "Home Page";
@@ -8,17 +9,7 @@
     ViewBag.Title = "Pagina Inicial";
 }
 <br />
-<a id="popupdiv" class="btn btn-primary text-light" onclick="abrirModal(
-    '@Url.Action("Cadastrar", "Produto", null, Context.Request.Scheme)')">
-    <img src="~/icons/adicionar.svg" />
-    Produto
-</a>
-<a id="popupdiv" class="btn btn-primary text-light" onclick="abrirModal(
-    '@Url.Action("Cadastrar", "Categoria", null, Context.Request.Scheme)')">
-    <img src="~/icons/adicionar.svg" />
-    Categoria
-</a>
-<br />
+
 @if (TempData["MSG_S"] != null)
 {
     <br />
@@ -31,11 +22,33 @@ else if (TempData["MSG_D"] != null)
     <p class="alert alert-danger">@TempData["MSG_D"]</p>
 }
 <br />
+
+
+<div class="col-md-12">
+    <div class="row justify-content-end">
+        <div class="col-md-9">
+            <form class="w-100">
+                <div class="md-form mt-0">
+                    <input id="search" class="form-control form-control-dark " type="search" placeholder="Procurar por nome">
+                </div>
+            </form>
+        </div>
+
+        <div class="col-md-3 text-right">
+            <a class="btn btn-dark text-light" onclick="abrirModal(
+                '@Url.Action("Cadastrar", "Produto", null, Context.Request.Scheme)')">
+                <img src="~/icons/adicionar.svg" />
+                Novo produto
+            </a>
+        </div>
+    </div>
+</div>
+<br />
 @if (Model.Count > 0)
 {
     <div class="table-responsive">
-        <table class="table text-center">
-            <thead>
+        <table class="table table-striped text-center">
+            <thead class="bg-dark text-light">
                 <tr>
                     <th scope="col">
                         @Html.DisplayNameFor(model => model.First().Id)
@@ -80,11 +93,24 @@ else if (TempData["MSG_D"] != null)
             }
         </table>
     </div>
-    <div>
-    </div>
-}
+    {
+        var prevDisabled = !Model.TemPaginaAnterior ? "disabled" : "";
+        var nextDisabled = !Model.TemProximaPagina ? "disabled" : "";
+    }
+
+    <a asp-action="Index"
+       asp-route-pageNumber="@(Model.PaginaInicial - 1)"
+       class="btn btn-dark text-light">
+        Anterior
+    </a>
+    <a asp-action="Index"
+       asp-route-pageNumber="@(Model.PaginaInicial + 1)"
+       class="btn btn-dark text-light">
+        Proxima
+    </a>
+       }
 else
 {
-    <span>Nenhum registro cadastrado</span>
+    <span>Nenhum registro encontrado!</span>
 
 }
